Enhance modal functionality and add customer management
- Updated ActionButton to use submit type for form buttons.
- Simplified ActionButton interface by removing unused parameters.
- Enhanced Dialog component with new templates for flexible rendering.
- Improved modal visibility management and state handling in Dialog.
- Added loading spinner functionality in DialogBody.
- Made DialogFooter conditional based on ShowFooter property.
- Set default values for IsDraggable and IsResizable in ModalOption.
- Changed OnHide event signature for asynchronous handling in modal services.
- Removed makeModalResizable function from JavaScript interop.
- Added DialogForms.Models project reference to the solution.
- Revamped Home layout to display customer data in a table.
- Updated _Imports.razor with new namespaces for models and services.
- Created CustomerModel with validation attributes for customer data.
- Implemented Customer.razor for adding and editing customer information.
- Managed customer form logic in Customer.razor.cs.
- Developed CustomerService for managing customer data and state changes.

--- a/DialogForms/DialogForms.csproj
+++ b/DialogForms/DialogForms.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DialogForms.Components\DialogForms.Components.csproj" />
+    <ProjectReference Include="..\DialogForms.Models\DialogForms.Models.csproj" />
   </ItemGroup>
 
 </Project>
